tests/should_fail/bug/773.stderr
error: Laws cannot have additional generic parameters or trait constraints
  --> 773.rs:12:5
   |
12 | /     #[ensures(forall<x: Self, y: Self> x == y)]
13 | |     fn a(self)
14 | |     where
15 | |         Self: One;
   | |__________________^

error: aborting due to 1 previous error

